<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>

    <string name="add_operand">+</string>
    <string name="subtract_operand">-</string>
    <string name="multiply_operand">×</string>
    <string name="divide_operand">÷</string>
    <string name="decimal">.</string>
    <string name="clear">C</string>
    <string name="back">←</string>
    <string name="back_alt">back</string>
    <string name="equals">=</string>
    <string name="in">(</string>
    <string name="out">)</string>

    <string name="pi">π</string>
    <string name="e">e</string>

    <string name="sinx">sin</string>
    <string name="cosx">cos</string>
    <string name="tanx">tan</string>
    <string name="cscx">csc</string>
    <string name="secx">sec</string>
    <string name="cotx">cot</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="action_settings">Settings</string>
    <string name="radians">Radians</string>
    <string name="degrees">Degrees</string>

    <string name="theme_string">Themes</string>
    <string name="default_theme">Default</string>
    <string name="inverted_theme">Inverted</string>
    <string name="pink_theme">Pink Glow</string>
    <string name="red_theme">Red Glow</string>
    <string name="blue_theme">Blue Glow</string>
    <string name="green_theme">Green Glow</string>
    <string name="yellow_theme">Yellow Glow</string>
    <string name="orange_theme">Orange Glow</string>
    <string name="purple_theme">Purple Glow</string>
    <string name="abstract_theme">Abstract</string>
    <string name="futuristic_theme">Furturistic</string>

</resources>
