<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/ThemeTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:shadowColor="@color/green_glow"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="3"
        android:text="@string/theme_string"
        android:textColor="@color/gray"
        android:textSize="50sp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/ThemeTextView"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="horizontal">
            <Button
                style="@style/DefaultButton"
                android:id="@+id/default_theme_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/default_theme"
                android:onClick="themeClick"/>
            <Button
                style="@style/InvertedButton"
                android:id="@+id/inverted_theme_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/default_theme_button"
                android:text="@string/inverted_theme"
                android:onClick="themeClick"/>
            <Button
                style="@style/RedGlow"
                android:id="@+id/red_glow_theme_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/inverted_theme_button"
                android:text="@string/red_theme"
                android:onClick="themeClick"/>
            <Button
                style="@style/GreenGlow"
                android:id="@+id/green_glow_theme_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/red_glow_theme_button"
                android:text="@string/green_theme"
                android:onClick="themeClick"/>
            <Button
                style="@style/YellowGlow"
                android:id="@+id/yellow_glow_theme_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/green_glow_theme_button"
                android:text="@string/yellow_theme"
                android:onClick="themeClick"/>
            <Button
                style="@style/OrangeGlow"
                android:id="@+id/orange_glow_theme_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/yellow_glow_theme_button"
                android:text="@string/orange_theme"
                android:onClick="themeClick"/>
            <Button
                style="@style/BlueGlow"
                android:id="@+id/blue_glow_theme_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/orange_glow_theme_button"
                android:text="@string/blue_theme"
                android:onClick="themeClick"/>
            <Button
                style="@style/PurpleGlow"
                android:id="@+id/purple_glow_theme_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/blue_glow_theme_button"
                android:text="@string/purple_theme"
                android:onClick="themeClick"/>
            <Button
                style="@style/PinkGlow"
                android:id="@+id/pink_glow_theme_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/purple_glow_theme_button"
                android:text="@string/pink_theme"
                android:onClick="themeClick"/>
            </RelativeLayout>

    </ScrollView>
</RelativeLayout>